--- a/prisma.yml
+++ b/prisma.yml
@@ -1,2 +1,7 @@
-endpoint: https://us1.prisma.sh/michael-tombor/sick-fits!/dev
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://us1.prisma.sh/michael-tombor/sick-fits/dev
 datamodel: datamodel.prisma
+# secret: ${env:PRISMA_SECRET}
+hooks:
+  post-deploy:
+    - graphql get-schema -p prisma
